--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.20)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.20\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.21)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.21\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.20)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.20\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.21)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.21\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1982,6 +1982,7 @@ msgctxt "admin.Settings_Html_RandCorr"
 msgid "Lbl"
 msgstr ""
 
+# FlatSome theme
 msgctxt "admin.Settings_Html_RandCorr"
 msgid "ThmFltsmChk"
 msgstr ""
@@ -3177,9 +3178,12 @@ msgctxt "admin.Settings_Styles_Fonts"
 msgid "DeInlineLargeChk_%1$s"
 msgstr ""
 
-# Early preloading (beta)
 msgctxt "admin.Settings_Styles_Fonts"
-msgid "FontPreloadChk"
+msgid "InlineChk"
+msgstr ""
+
+msgctxt "admin.Settings_Styles_Fonts"
+msgid "InclPhlr"
 msgstr ""
 
 # Non-critical
