--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.26)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.26\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.27)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.27\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.26)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.26\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.27)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.27\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2568,6 +2568,11 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "JetCrslPstChk"
 msgstr ""
 
+# Lazy styles loading from KPPassive
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "KpPsvStlsChk"
+msgstr ""
+
 # Multi View from Divi
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "DiviMvChk"
@@ -3178,10 +3183,12 @@ msgctxt "admin.Settings_Styles_Fonts"
 msgid "DeInlineLargeChk_%1$s"
 msgstr ""
 
+# Inline critical:
 msgctxt "admin.Settings_Styles_Fonts"
 msgid "InlineChk"
 msgstr ""
 
+# Regular expressions for font family, weight or URL, each on newline
 msgctxt "admin.Settings_Styles_Fonts"
 msgid "InclPhlr"
 msgstr ""
